--- a/less/_create-gift.less
+++ b/less/_create-gift.less
@@ -42,6 +42,13 @@
         @media screen and (max-width: 767px){
             max-width: 450px;
         }
+        .fund-name{
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+        }
     }
 }
 
@@ -500,6 +507,26 @@
 			}
 		}
 	}
+    .template-modal{
+        .modal-header{
+            .modal-title{
+                font-size: 1.2em;
+            }
+            .modal-caption{
+              font-size: 1em;  
+            }
+        }
+        .keywords .string{
+            font-size: 1em;
+        }
+        .btn{
+            &.site-btn-2{
+                padding: 0.7em 2em;
+                font-size: 0.95em;
+            }
+        }
+        
+    }
 }
 
 
@@ -593,6 +620,8 @@
 	    	flex-direction: column;
 	    	align-items: center;
 	    	text-align: center;
+            padding: 0.7em;
+            top: 80%;
 	    	.col{
 	    		flex: inherit;
 	    		width: 100%;
@@ -615,9 +644,18 @@
 	    }
 	}
 	.gift-note{
-	    margin: 9em auto 1em auto;
+	    margin: 8.5em auto 2em auto;
         width: 90%;
 	}
+    .create_Card{
+        .cards{
+            width: 90%;
+        }
+    }
+    .width-box{
+        margin-left: 1.3em;
+        margin-right: 1.3em;
+    }
 }
 
 
